<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.QRCodeActivity">

    <TextView
        android:id="@+id/valueQRCodeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/value_qrcode_view"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/valueQRCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/value_default"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/valueQRCodeView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/qrCodeView"
        android:layout_width="350dp"
        android:layout_height="350dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valueQRCode"
        app:layout_constraintVertical_bias="0.085"
        app:srcCompat="@color/material_dynamic_neutral80"
        android:contentDescription="@string/qrcode_description"/>
</androidx.constraintlayout.widget.ConstraintLayout>